Add singleton example with HTTP API

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -3,6 +3,15 @@ akka {
   loglevel = "DEBUG"
 }
 
+akka {
+  log-config-on-start = off
+  actor {
+    provider = "akka.cluster.ClusterActorRefProvider"
+  }
+}
+
+akka.cluster.downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+
 datastax-java-driver {
   basic.contact-points = [ "127.0.0.1:9042" ]
   basic.load-balancing-policy.local-datacenter = "SearchGraphAnalytics"
